# Tor-X

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_bridge.cpp
app/src/main/kotlin/com/torx/core/: VPNViewModel.kt
app/src/main/kotlin/com/torx/receiver/: BootReceiver.kt
app/src/main/kotlin/com/torx/service/: CrashHandlerService.kt  VPNService.kt
app/src/main/kotlin/com/torx/theme/: Theme.kt
app/src/main/kotlin/com/torx/ui/: MainActivity.kt
app/src/main/kotlin/com/torx/utils/: CrashLogger.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
rust/: Cargo.toml
rust/src/: lib.rs
