[package]
name = "tor-x-core"
version = "1.0.0"
edition = "2021"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
arti-client = "0.18"
arti-hyper = "0.18"
tor-rtcompat = "0.18"
tor-proto = "0.18"
tor-circmgr = "0.18"
hyper = { version = "1.1", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
android-logger = "0.14"
jni = { version = "0.21", features = ["invocation"] }
jni-sys = "0.3"

# Crypto
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"

# Networking
socket2 = "0.5"
nix = { version = "0.27", features = ["net"] }
pnet = "0.34"
pnet_packet = "0.34"
pcap = "1.1"

# SNI & TLS
rustls = "0.21"
webpki = "0.22"
x509-parser = "0.15"

# Async
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
lazy_static = "1.4"

# Utils
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
